--- a/index.html
+++ b/index.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Redirecting...</title>
-<script>
-const LINKS = [
-    // "https://www.baidu.com/" ,
-    // "https://www.bing.com/" ,
-    // "https://www.google.com/" ,
-    // "https://yeezy.com/"
-    "https://www.wjx.cn/vm/Ohr6Qbx.aspx# ",
-    "https://www.wjx.cn/vm/rXKShJw.aspx# ",
-    "https://www.wjx.cn/vm/QfA85Wy.aspx# ",
-    "https://www.wjx.cn/vm/e3s2eUn.aspx# "
-];
-const count = parseInt(localStorage.getItem('rrCount') || 0);
-localStorage.setItem('rrCount', count + 1);
-const url = LINKS[count % LINKS.length];
-window.location.replace(url);
-</script>
+  <meta charset="utf-8">
+  <title>问卷入口</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      display: flex;
+      height: 100vh;
+      align-items: center;
+      justify-content: center;
+      background: #f0f2f5;
+    }
+    .btn {
+      font-size: 20px;
+      padding: 15px 30px;
+      border-radius: 10px;
+      border: none;
+      background: #007bff;
+      color: white;
+      cursor: pointer;
+    }
+    .btn:hover {
+      background: #0056b3;
+    }
+  </style>
 </head>
 <body>
-Redirecting…
+
+  <button class="btn" onclick="startRedirect()">点击开始答题</button>
+
+  <script>
+    function startRedirect() {
+      window.location.href = "https://redirect-user-redirec-service-azyodvljbj.cn-hangzhou.fcapp.run";
+    }
+  </script>
+
 </body>
 </html>
